<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="261dp"
            android:layout_weight="1"
            android:src="@drawable/calculation" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/resultView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:text="@string/result"
            android:textAlignment="viewEnd"
            android:textColor="#8F8F8F"
            android:textSize="38sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_7"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_8"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_9"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/symMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/sym_mul"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_4"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_5"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:height="100dp"
                android:text="@string/num_6"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/symSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/sym_sub"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_1"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_2"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_3"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/symAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/sym_add"
                android:onClick="symbolInput"
                android:textSize="28sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="-1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num0"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/num_0"
                android:onClick="numberInput"
                android:textSize="28sp" />

            <Button
                android:id="@+id/symClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/sym_clear"
                android:onClick="clearAll"
                android:textSize="28sp" />

            <Button
                android:id="@+id/symEqu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4.2dp"
                android:height="100dp"
                android:text="@string/sym_equ"
                android:onClick="displayResult"
                android:textSize="28sp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>